fix viewing error on mobile screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,8 +65,11 @@ header.bgImgCenter{
   }
 }
 
-body {
+html, body {
   overflow-x: hidden;
+} 
+
+body {
   margin: 0;
   font-family: var(--bs-body-font-family);
   font-size: var(--bs-body-font-size);
@@ -77,11 +80,6 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-@media (max-width: 500px) {
-  body {
-    overflow-x: hidden;
-  }
 }
 
 hr {
